--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <script src="js/html5shiv.js"></script>
     <![endif]-->
   </head>
-  <body>
+  <body><br><br><br>
     <div class="container">
         <div class="row">
             <div class="quiz">
