--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
       <script src="js/html5shiv.js"></script>
     <![endif]-->
   </head>
-  <body><br><br><br>
+  <body>
     <div class="container">
-        <div class="row">
+      
+        <div class="row" style="margin-top:50px;">
             <div class="quiz">
                 
             </div>
