--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <body>
     <div class="container">
       
-        <div class="row" style="margin-top:50px;">
-            <div class="quiz">
+        <div class="row"
+            <div class="quiz"  style="margin-top:50px;">
                 
             </div>
         </div>
