--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <div class="container">
         <div class="row">
-            <div class="quiz">
+            <div class="quiz" style="margin-top:50px;">
                 
             </div>
         </div>
